# healtharchive-datasets

./: .editorconfig  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  DOCUMENTATION.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: datasets-ci.yml  keepalive.yml  publish-dataset-release.yml
scripts/: _ci_fail.py  build_release.py  check_docs_references.py  install-pre-push-hook.sh  setup-hooks.sh  validate_release_bundle.py
tests/: test_validate_release_bundle.py
