[project]
name = "healtharchive-datasets"
version = "0.1.0"
description = "Metadata-only HealthArchive dataset release tooling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
